--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,9 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-content">
+                <div class="hero-gif">
+                    <img src="https://media.discordapp.net/attachments/1074044832760221771/1241862738452545676/8d2e44f85d717ac1.gif?ex=693a8c8d&is=69393b0d&hm=49342bdc29bfa55f07b902bdc300f9cdc01d758a43d6019f4144529e350efd95&=" alt="AI Animation" class="hero-animation">
+                </div>
                 <h1 class="hero-title">
                     <span class="gradient-text">Умный Голосовой</span>
                     <span class="gradient-text">Ассистент</span>
