--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Voice Assistant</title>
+    <title>🎤 AI Voice Assistant</title>
     <link rel="stylesheet" href="/static/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -193,7 +193,7 @@
                         </div>
                         <div class="stat-info">
                             <div class="stat-value" id="requestCount">0</div>
-                            <div class="stat-label">Запросов</div>
+                            <div class="stat-label">Всего запросов</div>
                         </div>
                     </div>
                     
@@ -203,7 +203,7 @@
                         </div>
                         <div class="stat-info">
                             <div class="stat-value" id="responseTime">-</div>
-                            <div class="stat-label">Время ответа</div>
+                            <div class="stat-label">Среднее время ответа</div>
                         </div>
                     </div>
                     
